Fixed container to properly contain each element in its corresponding area, navbar spacing is still an issue -Andrew & Jason

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ nav {
   .container{
     display:grid;
     grid-template-columns: 100%;
-    grid-template-rows: 10% 27% 27% 27% 9%;
+    grid-template-rows: 10% 27% 27% 29% 7%;
     height: 100vh;
   }
 
